--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -77,7 +77,7 @@
                         <p style="color: #00223D">Alcanzar un movimiento permanente de la mercancía, con el fin de hacer más eficiente la operación. </p>
                     </li>
                 </ul>
-                <h1 class="text-center my-5" style="color: #4DD0E0"> el sistema logístico</h1><img class="img-fluid col-12" src="assets/images/pages/ilustraciones/sistema_logistico.svg" />
+                <h1 class="text-center my-5" style="color: #4DD0E0"> El sistema logístico</h1><img class="img-fluid col-12" src="assets/images/pages/ilustraciones/sistema_logistico.svg" />
             </div>
         </div>
         <div class="card" style="background-color:#94E3EC"><img class="img-fluid" src="assets/images/pages/ilustraciones/actividades.png" style="margin-top: -4px" />
