--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <title>Aspectos y características de los Sistemas de Información</title>
-        <meta meta name="description" content="Descripción del propósito educativo del componente">
+        <title>SISTEMAS DE INFORMACIÓN EN LOS CENTROS DE DISTRIBUCIÓN</title>
+        <meta meta name="description" content="Aspectos y características de los Sistemas de Información">
         <link rel="icon" type="image/svg+xml" href="assets/images/logos/senaLogo.svg">
         <link rel="stylesheet" href="assets/fonts/feather/feather.css">
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/font-awesome.css">
